DGGS QA and codecoverage. Adding tests for DGGS Service and DapaExtension